2005-08-29  Andrew Pinski  <pinskia@physics.uc.edu>

	* configure.ac: Replace "*-*-darwin[0-7].*" with
	"*-*-darwin[[0-7]].*"
	* configure: Regenerate.

2005-08-24  Andreas Tobler  <a.tobler@schweiz.ch>

	* configure.ac (extra_ldflags_libjava): Enable -single_module only for
	darwin < 8.
	* configure: Regenerate.

2005-08-23  Roman Kennke  <roman@kennke.org>

	* java/lang/Character.java
	(toChars(int)): New JDK1.5 method.
	(toChars(int, char[], int)): New JDK1.5 method.
	(charCount): New JDK1.5 method.
	(isSupplementaryCodePoint): New JDK1.5 method.
	(isValidCodePoint): New JDK1.5 method.

2005-08-23  Tom Tromey  <tromey@redhat.com>

	* aclocal.m4, Makefile.in: Rebuilt.
	* Makefile.am (property_files): Added META-INF files.
	(propertyo_files): Changed definition.
	($(propertyo_files)): Updated patterns.

2005-08-22  Tom Tromey  <tromey@redhat.com>

	PR libgcj/22622:
	* configure: Rebuilt.
	* configure.ac: Correctly create Configuration.java (for
	temporary use).

2005-08-22  Kelley Cook  <kcook@gcc.gnu.org>

	* Makefile.am (ACLOCAL_AMFLAGS): Also include "..".
	* acinclude.m4: Delete.  Extract CHECK_FOR_BROKEN_MINGW_LD to ...
	* mingwld.m4: ... this new file.
	* aclocal.m4, Makefile.in, gcj/Makefile.in: Regenerate. 
	* include/Makefile.in, testsuite/Makfile.in: Regenerate.

2005-08-21  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR libgcj/23507
	* stacktrace.cc (_Jv_StackTrace::UnwindTraceFn): Fix typo in newLength
	assignment.  Cast operands of compare to function pointer type.

2005-08-21  Tom Tromey  <tromey@redhat.com>

	* HACKING: Updated for hacking classpath in libgcj.

2005-08-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR libgcj/21692
	* sysdep/pa/descriptor.h: New file.
	* configure.host: Use sysdep/pa/descriptor.h on hppa*-*.

2005-08-19  Andrew Pinski  <pinskia@physics.uc.edu>

	* Makefile.am (extra_ldflags_libjava): New variable to
	substitute in.
	(LIBLINK): Add extra_ldflags_libjava to it.